Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19499

sanity-lfsck test_44: ASSERTION( dev->od_otable_it == ((void *)0) ) failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.17.0
    • Lustre 2.17.0
    • SLES 15.6 client
    • 3
    • 9223372036854775807

      This issue was created by maloo for jianyu <yujian@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/6319759b-015b-4850-b397-c81d4164b91e

      test_44 failed with the following error:

      == sanity-lfsck test 44: umount while lfsck is stopping == 15:08:35 (1760713715)
      preparing... 3 * 3 files will be created Fri Oct 17 03:08:35 PM UTC 2025.
      total: 3 mkdir in 0.00 seconds: 2048.00 ops/second
      total: 3 create in 0.00 seconds: 2652.38 ops/second
      total: 3 mkdir in 0.00 seconds: 2642.91 ops/second
      prepared Fri Oct 17 03:08:35 PM UTC 2025.
      CMD: trevis-156vm31 /usr/sbin/lctl set_param fail_val=3 fail_loc=0x1600
      fail_val=3
      fail_loc=0x1600
      CMD: trevis-156vm31 /usr/sbin/lctl lfsck_start -M lustre-MDT0000 -t namespace -r
      Started LFSCK on the device lustre-MDT0000: scrub namespace
      CMD: trevis-156vm31 /usr/sbin/lctl lfsck_stop -M lustre-MDT0000
      CMD: trevis-156vm31 grep -c /mnt/lustre-mds1' ' /proc/mounts || true
      Stopping /mnt/lustre-mds1 (opts:) on trevis-156vm31
      CMD: trevis-156vm31 umount -d /mnt/lustre-mds1
      

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-master/4659 - 6.4.0-150600.23.70-default
      servers: https://build.whamcloud.com/job/lustre-master/4659 - 5.14.0-503.40.1_lustre.el9.x86_64

      <<Please provide additional information about the failure here>>

      Unmounting MDS crashed:

      [22710.175119] Lustre: DEBUG MARKER: umount -d /mnt/lustre-mds1
      [22710.329871] Lustre: Failing over lustre-MDT0000
      [22710.508226] LustreError: 1059943:0:(osd_scrub.c:2739:osd_scrub_cleanup()) ASSERTION( dev->od_otable_it == ((void *)0) ) failed: 
      [22710.508311] LustreError: 1059943:0:(osd_scrub.c:2739:osd_scrub_cleanup()) LBUG
      [22710.508374] CPU: 0 PID: 1059943 Comm: umount Kdump: loaded Tainted: G           OE     -------  ---  5.14.0-503.40.1_lustre.el9.x86_64 #1
      [22710.508424] Hardware name: Red Hat KVM, BIOS 1.16.3-2.el9_5.1 04/01/2014
      [22710.508468] Call Trace:
      [22710.508511]  <TASK>
      [22710.508555]  dump_stack_lvl+0x34/0x48
      [22710.508605]  lbug_with_loc.cold+0x5/0x43 [libcfs]
      [22710.508661]  osd_scrub_cleanup+0x7a/0x80 [osd_ldiskfs]
      [22710.508732]  osd_shutdown+0x78/0x110 [osd_ldiskfs]
      [22710.508798]  osd_process_config+0x21d/0x3c0 [osd_ldiskfs]
      [22710.508864]  lod_process_config+0x40c/0x1000 [lod]
      [22710.508930]  ? __kmem_cache_alloc_node+0x18f/0x2e0
      [22710.508977]  ? mdt_stack_fini+0x1ca/0x680 [mdt]
      [22710.509050]  mdd_process_config+0xac/0x450 [mdd]
      [22710.509112]  mdt_stack_fini+0x2ff/0x680 [mdt]
      [22710.509184]  mdt_fini+0x305/0x580 [mdt]
      [22710.509253]  mdt_device_fini+0x2b/0xc0 [mdt]
      [22710.509324]  obd_precleanup.isra.0+0x8b/0x280 [obdclass]
      [22710.509435]  ? srso_alias_return_thunk+0x5/0xfbef5
      [22710.509482]  ? class_disconnect_exports+0x131/0x300 [obdclass]
      [22710.509579]  class_cleanup+0x2db/0x600 [obdclass]
      [22710.509676]  class_process_config+0x12ef/0x1e00 [obdclass]
      [22710.509769]  ? __kmem_cache_alloc_node+0x18f/0x2e0
      [22710.509814]  ? class_manual_cleanup+0x160/0x730 [obdclass]
      [22710.509907]  ? class_manual_cleanup+0x160/0x730 [obdclass]
      [22710.509998]  ? srso_alias_return_thunk+0x5/0xfbef5
      [22710.510044]  class_manual_cleanup+0x1e5/0x730 [obdclass]
      [22710.510137]  server_put_super+0xa86/0xc60 [ptlrpc]
      [22710.510285]  generic_shutdown_super+0x71/0xf0
      [22710.510340]  kill_anon_super+0x12/0x40
      <~snip~>
      [22710.512688] Kernel panic - not syncing: LBUG
      

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity-lfsck test_44 - trevis-156vm31 crashed during sanity-lfsck test_44

            laisiyao Lai Siyao
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: