LU-19499 lfsck: serialize start/stop

Now that lfsck start is serialized via lfsck->li_mutex, we should also
serialize lfsck stop to avoid strange errors.

Fixes: 2b5df830d4 ("LU-19370 lfsck: don't use ptlrpc_thread for LFSCK")
Signed-off-by: Lai Siyao <lai.siyao@whamcloud.com>
Change-Id: I0f24009110abb3a40a9cf313d201592a867064e9
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/61990
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Emoly Liu <emoly@whamcloud.com>